--- a/package.json
+++ b/package.json
@@ -1,60 +1,33 @@
 {
-  "name": "e3forms_bis",
-  "version": "0.0.0",
+  "name": "nuxt-app",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "test:unit": "vitest",
-    "prepare": "cypress install",
-    "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
-    "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build",
-    "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
-    "lint:eslint": "eslint . --fix",
-    "lint": "run-s lint:*",
-    "format": "prettier --write src/"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "pinia": "^3.0.1",
+    "@nuxt/eslint": "1.2.0",
+    "@nuxt/fonts": "0.11.0",
+    "@nuxt/icon": "1.11.0",
+    "@nuxt/image": "1.10.0",
+    "@nuxt/scripts": "0.11.5",
+    "@nuxt/test-utils": "3.17.2",
+    "@nuxt/ui": "3.0.1",
+    "@unhead/vue": "^2.0.0-rc.8",
+    "eslint": "^9.0.0",
+    "nuxt": "^3.16.1",
+    "typescript": "^5.6.3",
     "vue": "^3.5.13"
   },
+  "packageManager": "pnpm@10.7.0+sha512.6b865ad4b62a1d9842b61d674a393903b871d9244954f652b8842c2b553c72176b278f64c463e52d40fff8aba385c235c8c9ecf5cc7de4fd78b8bb6d49633ab6",
   "devDependencies": {
-    "@tsconfig/node22": "^22.0.0",
-    "@types/jsdom": "^21.1.7",
-    "@types/node": "^22.13.9",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vitejs/plugin-vue-jsx": "^4.1.1",
-    "@vitest/eslint-plugin": "^1.1.36",
-    "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^14.5.0",
-    "@vue/test-utils": "^2.4.6",
-    "@vue/tsconfig": "^0.7.0",
-    "cypress": "^14.1.0",
-    "eslint": "^9.21.0",
-    "eslint-plugin-cypress": "^4.2.0",
-    "eslint-plugin-oxlint": "^0.15.13",
-    "eslint-plugin-vue": "~10.0.0",
-    "jiti": "^2.4.2",
-    "jsdom": "^26.0.0",
-    "npm-run-all2": "^7.0.2",
-    "oxlint": "^0.15.13",
-    "prettier": "3.5.3",
+    "better-sqlite3": "^11.9.1",
     "sass-embedded": "^1.86.0",
-    "start-server-and-test": "^2.0.10",
-    "typescript": "~5.8.0",
-    "vite": "^6.2.1",
-    "vite-plugin-vue-devtools": "^7.7.2",
-    "vitest": "^3.0.8",
-    "vue-tsc": "^2.2.8"
-  },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "cypress",
-      "esbuild"
-    ]
+    "tsconfig-paths": "^4.2.0",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
